<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    >
    <item android:id="@+id/action_home" android:title="@string/title_home"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_aboutus" android:title="@string/action_aboutus"
        android:orderInCategory="300" app:showAsAction="never"
        />
    <item android:id="@+id/action_resources" android:title="@string/action_resources"
        android:orderInCategory="400" app:showAsAction="never"
        />
    <item android:id="@+id/action_news" android:title="NEWS"
        android:orderInCategory="500" app:showAsAction="never"/>
    <item android:id="@+id/action_tou" android:title="TERMS OF USE"
        android:orderInCategory="600" app:showAsAction="never"/>
</menu>
