<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="comsamverma.github.recyclist.RegisterActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/primary"
            >
            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/rrr"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                            <LinearLayout android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="center_horizontal"
                            android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            >

                            <!-- Login progress -->
                            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp" android:visibility="gone" />

                            <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                    android:orientation="vertical">


                                    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                                        android:layout_height="wrap_content" android:orientation="vertical">
                                        <TextView
                                            android:id="@+id/reghead"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/reghead"
                                            android:textStyle="bold"
                                            android:textSize="18dp"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <EditText
                                            android:id="@+id/email"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_email"
                                            android:inputType="textEmailAddress"
                                            android:maxLines="1"
                                            android:singleLine="true" />

                                        <EditText
                                            android:id="@+id/password"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_password"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:singleLine="true"/>

                                        <EditText
                                            android:id="@+id/confirm"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_confirm"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:singleLine="true"/>
                                            <!--android:imeActionId="@+id/login"
                                            android:imeActionLabel="@string/action_sign_in"
                                            android:imeOptions="actionUnspecified"-->

                                        <EditText
                                            android:id="@+id/firstname"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_firstname"
                                            android:inputType="textPersonName"
                                            android:maxLines="1"
                                            android:singleLine="true" />

                                        <EditText
                                            android:id="@+id/lastname"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_lastname"
                                            android:inputType="textPersonName"
                                            android:maxLines="1"
                                            android:singleLine="true" />

                                        <EditText
                                            android:id="@+id/compname"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compname"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />

                                        <EditText
                                            android:id="@+id/compinfo"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compinfo"
                                            android:inputType="textLongMessage"
                                            android:maxLines="5"
                                            />
                                        <EditText
                                            android:id="@+id/comppurp"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_comppurp"
                                            android:inputType="textLongMessage"
                                            android:maxLines="3"
                                          />
                                        <EditText
                                            android:id="@+id/compphone"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compphone"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <EditText
                                            android:id="@+id/compaddress"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compaddress"
                                            android:inputType="textLongMessage"
                                            android:maxLines="2"
                                             />
                                        <EditText
                                            android:id="@+id/compcity"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compcity"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <EditText
                                            android:id="@+id/compstate"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compstate"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <EditText
                                            android:id="@+id/compzip"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_compzip"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <EditText
                                            android:id="@+id/complicnum"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_complicnum"
                                            android:inputType="textShortMessage"
                                            android:maxLines="1"
                                            android:singleLine="true" />
                                        <CheckBox
                                            android:id="@+id/emailnotify"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textSize="16dp"
                                            android:text="@string/emailnot"
                                            android:layout_centerHorizontal="true" />

                                        <Button
                                            android:id="@+id/register"
                                            style="?android:textAppearanceSmall"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="3dp"
                                            android:text="@string/action_sign_up"
                                            android:background="@drawable/shape_roundedrect"
                                            android:textColor="#ffffff"
                                            android:textStyle="bold"
                                            android:onClick="Register"/>

                                        <Button
                                            android:id="@+id/go_sign_in"
                                            style="?android:textAppearanceSmall"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="1dp"
                                            android:text="@string/action_na_sign_in"
                                            android:background="@drawable/shape_roundedrect"
                                            android:textColor="#ffffff"
                                            android:textStyle="bold"
                                            android:onClick="clickLogIn"/>

                                        <com.google.android.gms.ads.AdView
                                            android:id="@+id/adView"
                                            android:layout_marginTop="5dp"
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_centerHorizontal="true"
                                            android:layout_alignParentBottom="true"
                                            ads:adSize="BANNER"
                                            ads:adUnitId="@string/banneradunitid">
                                        </com.google.android.gms.ads.AdView>

                                    </LinearLayout>
                                </LinearLayout>
                            </ScrollView>

                        </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
