<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="comsamverma.github.recyclist.CreateListingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/primary">

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:contentDescription="@string/ctpic"
                android:layout_height="200dp"
                android:src="@drawable/rrr"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        >





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:gravity="center_horizontal"
                    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    >

                    <!-- Login progress -->
                    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp" android:visibility="gone" />

                    <ScrollView android:id="@+id/createlist_form" android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout android:id="@+id/createlist_form1" android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:orientation="vertical">
                                <TextView
                                    android:id="@+id/createlisthead"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/reghead"
                                    android:textStyle="bold"
                                    android:textSize="18dp"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                                <EditText
                                    android:id="@+id/listingtitle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_title"
                                    android:inputType="textShortMessage"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                                <EditText
                                    android:id="@+id/listingcost"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_cost"
                                    android:inputType="textShortMessage"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                                <EditText
                                    android:id="@+id/listingcontent"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_content"
                                    android:inputType="textLongMessage"
                                    android:maxLines="8"
                                    android:singleLine="true"/>
                                <Spinner
                                    android:id="@+id/clstatesfull_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleX=".75"
                                    android:scaleY=".75"
                                    android:background="@android:drawable/btn_dropdown"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:padding="2dp"/>

                                <Button
                                    android:id="@+id/createlisting"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="3dp"
                                    android:background="@drawable/shape_roundedrect"
                                    android:scaleY=".7"
                                    android:scaleX=".7"
                                    android:text="@string/action_create_listing"
                                    android:textStyle="bold"
                                    android:textColor="#ffffff"
                                    android:onClick="CreateListing"/>


                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

